# cmake_playground

./: .gitlab-ci.yml  CMakeLists.txt  CMakeTestBedConfigVersion.cmake.in  README.md
cmake/: CMakeTestBedConfig.cmake.in  cmake_test_bed_version.h.in
source/: CMakeLists.txt
source/state_machine/: CMakeLists.txt  state_machine.cpp  state_machine.h
source/state_machine/cmake/: state_machine-config.cmake
source/state_machine/tests/: CMakeLists.txt  test.cpp
source/test_lib/: CMakeLists.txt  foo1.cpp  foo1.h
source/tool_app/: CMakeLists.txt  main.cpp
source/wrapper/app/: CMakeLists.txt  main.cpp
